--- a/index.html
+++ b/index.html
@@ -108,13 +108,28 @@
                 <div>
                     <ul class="what-we-do list">
                         <li class="what-we-do-item">
-                            <img src="images/sec-2-img-1.jpeg" alt="Планшет с клавиатурой" width="370">
+                            <div class="what-we-do-thumb">
+                                <img src="images/sec-2-img-1.jpeg" alt="Планшет с клавиатурой" width="370">
+                                <div class="what-we-do-p">
+                                    <p class="what-we-do-text">Десктопные приложения</p>
+                                </div>
+                            </div>
                         </li>
                         <li class="what-we-do-item">
-                            <img src="images/sec-2-img-2.jpeg" alt="Ноутбук" width="370">
+                            <div class="what-we-do-thumb">
+                                <img src="images/sec-2-img-2.jpeg" alt="Ноутбук" width="370">
+                                <div class="what-we-do-p">
+                                    <p class="what-we-do-text">Мобильные приложения</p>
+                                </div>
+                            </div>
                         </li>
                         <li class="what-we-do-item">
-                            <img src="images/sec-2-img-3.jpeg" alt="Планшет" width="370">
+                            <div class="what-we-do-thumb">
+                                <img src="images/sec-2-img-3.jpeg" alt="Планшет" width="370">
+                                <div class="what-we-do-p">
+                                    <p class="what-we-do-text">Дизайнерские решения</p>
+                                </div>
+                            </div>
                         </li>
                     </ul>
                 </div>
