add new sprite.svg

--- a/portfolio.html
+++ b/portfolio.html
@@ -19,29 +19,31 @@
 </head>
 <body>
 
-    <header id="logo" class="page-header container nav-main">
-        <a class="logo-color-text" href="#logo"><span class="logo-text">Web</span>Studio</a>
-        <nav>
-            <ul class="site-nav list">
-                <li class="nav-item"><a class="link-header" href="./index.html">Студия</a></li>
-                <li class="nav-item"><a class="link-header" href="./portfolio.html">Портфолио</a></li>
-                <li class="nav-item"><a class="link-header" href="#contacts">Контакты</a></li>
+    <header id="logo" class="page-header">
+        <div class="container nav-main">
+            <a class="logo-color-text" href="#logo"><span class="logo-text">Web</span>Studio</a>
+            <nav>
+                <ul class="site-nav list">
+                    <li class="nav-item"><a class="link-header" href="./index.html">Студия</a></li>
+                    <li class="nav-item"><a class="link-header active-link-header" href="./portfolio.html">Портфолио</a></li>
+                    <li class="nav-item"><a class="link-header" href="#contacts">Контакты</a></li>
+                </ul>
+            </nav>
+            <ul class="nav-contact-us-header list">
+                <li class="nav-contact-us-item">
+                    <a class="contact-us-header" href="mailto:info@devstudio.com">
+                        <svg class="contact-icon" width="16px" height="12px">
+                            <use href="images/sprite.svg#icon-icon-envelope-contact"></use>
+                        </svg>info@devstudio.com</a>
+                </li>
+                <li class="nav-contact-us-item">
+                    <a class="contact-us-header" href="tel:+380961111111">
+                        <svg class="contact-icon" width="10px" height="16px">
+                            <use href="images/sprite.svg#icon-icon-smartphone-contact"></use>
+                        </svg>+38 096 111 11 11</a>
+                </li>
             </ul>
-        </nav>
-        <ul class="nav-contact-us-header list">
-            <li class="nav-contact-us-item">
-                <a class="contact-us-header" href="mailto:info@devstudio.com">
-                    <svg class="contact-icon" width="16px" height="12px">
-                        <use href="images/sprite.svg#icon-icon-envelope-contact"></use>
-                    </svg>info@devstudio.com</a>
-            </li>
-            <li class="nav-contact-us-item">
-                <a class="contact-us-header" href="tel:+380961111111">
-                    <svg class="contact-icon" width="10px" height="16px">
-                        <use href="images/sprite.svg#icon-icon-smartphone-contact"></use>
-                    </svg>+38 096 111 11 11</a>
-            </li>
-        </ul>
+        </div>
     </header>
 
 
@@ -61,137 +63,138 @@
                 <ul class="products-list list">
 
                     <li class="product-item">
-                        <div class="product-item-thumb">
                             <a href="./portfolio.html" class="prtfl-card">
-                                <img src="images/prtfl-img-1-technokriak.jpeg" alt="открый ноутбук" width="370">
+                                <div class="product-item-thumb">
+                                    <img src="images/prtfl-img-1-technokriak.jpeg" alt="открый ноутбук" width="370">
+                                    <div class="product-item-overlay-text">
+                                        <p class="product-item-p-text">Технокряк это современная площадка распространения коронавируса. Компании используют
+                                            эту платформу для цифрового
+                                            шпионажа и атак на защищённые сервера конкурентов.</p>
+                                    </div>
+                                </div>
                                 <h2 class="prtfl-card-title">Технокряк</h2>
                                 <h3 class="prtfl-filtr-description web-site">Веб-сайт</h3>
-                            </a>
-                            <div class="product-item-thumb-p overlay">
-                                <p class="product-item-p-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
-                                шпионажа и атак на защищённые сервера конкурентов.</p>
-                            </div>
-                        </div>
+                            </a> 
                     </li>
 
                     <li class="product-item">
-                        <div class="product-item-thumb">
                             <a href="./portfolio.html" class="prtfl-card">
-                                <img src="images/prtfl-img-2-new-poster.jpeg" alt="игра в баскетбол" width="370">
+                                <div class="product-item-thumb">
+                                    <img src="images/prtfl-img-2-new-poster.jpeg" alt="игра в баскетбол" width="370">
+                                    <div class="product-item-overlay-text">
+                                        <p class="product-item-p-text">Технокряк это современная площадка распространения коронавируса. Компании используют
+                                            эту платформу для цифрового
+                                            шпионажа и атак на защищённые сервера конкурентов.</p>
+                                    </div>
+                                </div>
                                 <h2 class="prtfl-card-title">Постер New Orlean vs Golden Star</h2>
                                 <h3 class="prtfl-filtr-description design">Дизайн</h3>
                             </a>
-                            <div class="product-item-thumb-p">
-                                <p class="product-item-p-text">Технокряк это современная площадка распространения коронавируса. Компании используют
-                                    эту платформу для цифрового
-                                    шпионажа и атак на защищённые сервера конкурентов.</p>
-                            </div>
-                        </div>
                     </li>
 
                     <li class="product-item">
-                        <div class="product-item-thumb">
                             <a href="portfolio.html" class="prtfl-card">
-                                <img src="images/prtfl-img-3-seafood.jpeg" alt="логотип ресторана морепродуктов" width="370">
+                                <div class="product-item-thumb">
+                                    <img src="images/prtfl-img-3-seafood.jpeg" alt="логотип ресторана морепродуктов" width="370">
+                                    <div class="product-item-overlay-text">
+                                        <p class="product-item-p-text">Технокряк это современная площадка распространения коронавируса. Компании используют
+                                            эту платформу для цифрового
+                                            шпионажа и атак на защищённые сервера конкурентов.</p>
+                                    </div>
+                                </div>
                                 <h2 class="prtfl-card-title">Ресторан Seafood</h2>
                                 <h3 class="prtfl-filtr-description app">Приложение</h3>
                             </a>
-                            <div class="product-item-thumb-p">
-                                <p class="product-item-p-text">Технокряк это современная площадка распространения коронавируса. Компании используют
-                                    эту платформу для цифрового
-                                    шпионажа и атак на защищённые сервера конкурентов.</p>
-                            </div>
-                        </div>
                     </li>
     
                     <li class="product-item">
-                        <div class="product-item-thumb">
                             <a href="portfolio.html" class="prtfl-card">
-                                <img src="images/prtfl-img-4-prime.jpeg" alt="наушники" width="370">
+                                <div class="product-item-thumb">
+                                    <img src="images/prtfl-img-4-prime.jpeg" alt="наушники" width="370">
+                                    <div class="product-item-overlay-text">
+                                        <p class="product-item-p-text">Технокряк это современная площадка распространения коронавируса. Компании используют
+                                            эту платформу для цифрового
+                                            шпионажа и атак на защищённые сервера конкурентов.</p>
+                                    </div>
+                                </div>
                                 <h2 class="prtfl-card-title">Проект Prime</h2>
                                 <h3 class="prtfl-filtr-description marketing">Маркетинг</h3>
                             </a>
-                            <div class="product-item-thumb-p">
-                                <p class="product-item-p-text">Технокряк это современная площадка распространения коронавируса. Компании используют
-                                    эту платформу для цифрового
-                                    шпионажа и атак на защищённые сервера конкурентов.</p>
-                            </div>
-                        </div>
                     </li>
 
                     <li class="product-item">
-                        <div class="product-item-thumb">
                             <a href="portfolio.html" class="prtfl-card">
-                                <img src="images/prtfl-img-5-boxes.jpeg" alt="коробки" width="370">
+                                <div class="product-item-thumb">
+                                    <img src="images/prtfl-img-5-boxes.jpeg" alt="коробки" width="370">
+                                    <div class="product-item-overlay-text">
+                                        <p class="product-item-p-text">Технокряк это современная площадка распространения коронавируса. Компании используют
+                                            эту платформу для цифрового
+                                            шпионажа и атак на защищённые сервера конкурентов.</p>
+                                    </div>
+                                </div>
                                 <h2 class="prtfl-card-title">Проект Boxes</h2>
                                 <h3 class="prtfl-filtr-description app">Приложение</h3>
                             </a>
-                            <div class="product-item-thumb-p">
-                                <p class="product-item-p-text">Технокряк это современная площадка распространения коронавируса. Компании используют
-                                    эту платформу для цифрового
-                                    шпионажа и атак на защищённые сервера конкурентов.</p>
-                            </div>
-                        </div>
                     </li>
 
                     <li class="product-item">
-                        <div class="product-item-thumb">
                             <a href="portfolio.html" class="prtfl-card">
-                                <img src="images/prtfl-img-6-inspiration.jpeg" alt="монитор" width="370">
+                                <div class="product-item-thumb">
+                                    <img src="images/prtfl-img-6-inspiration.jpeg" alt="монитор" width="370">
+                                    <div class="product-item-overlay-text">
+                                        <p class="product-item-p-text">Технокряк это современная площадка распространения коронавируса. Компании используют
+                                            эту платформу для цифрового
+                                            шпионажа и атак на защищённые сервера конкурентов.</p>
+                                    </div>
+                                </div>
                                 <h2 class="prtfl-card-title">Inspiration has no Borders</h2>
                                 <h3 class="prtfl-filtr-description web-site">Веб-сайт</h3>
                             </a>
-                            <div class="product-item-thumb-p">
-                                <p class="product-item-p-text">Технокряк это современная площадка распространения коронавируса. Компании используют
-                                    эту платформу для цифрового
-                                    шпионажа и атак на защищённые сервера конкурентов.</p>
-                            </div>
-                        </div>
                     </li>
 
                     <li class="product-item">
-                        <div class="product-item-thumb">
                             <a href="portfolio.html" class="prtfl-card">
-                                <img src="images/prtfl-img-7-limited.jpeg" alt="журнал" width="370">
+                                <div class="product-item-thumb">
+                                    <img src="images/prtfl-img-7-limited.jpeg" alt="журнал" width="370">
+                                    <div class="product-item-overlay-text">
+                                        <p class="product-item-p-text">Технокряк это современная площадка распространения коронавируса. Компании используют
+                                            эту платформу для цифрового
+                                            шпионажа и атак на защищённые сервера конкурентов.</p>
+                                    </div>
+                                </div>
                                 <h2 class="prtfl-card-title">Издание Limited Edition</h2>
                                 <h3 class="prtfl-filtr-description design">Дизайн</h3>
                             </a>
-                            <div class="product-item-thumb-p">
-                                <p class="product-item-p-text">Технокряк это современная площадка распространения коронавируса. Компании используют
-                                    эту платформу для цифрового
-                                    шпионажа и атак на защищённые сервера конкурентов.</p>
-                            </div>
-                        </div>
                     </li>
 
                     <li class="product-item">
-                        <div class="product-item-thumb">
                             <a href="portfolio.html" class="prtfl-card">
-                                <img src="images/prtfl-img-8-lab.jpeg" alt="бирка" width="370">
+                                <div class="product-item-thumb">
+                                    <img src="images/prtfl-img-8-lab.jpeg" alt="бирка" width="370">
+                                    <div class="product-item-overlay-text">
+                                        <p class="product-item-p-text">Технокряк это современная площадка распространения коронавируса. Компании используют
+                                            эту платформу для цифрового
+                                            шпионажа и атак на защищённые сервера конкурентов.</p>
+                                    </div>
+                                </div>
                                 <h2 class="prtfl-card-title">Проект LAB</h2>
                                 <h3 class="prtfl-filtr-description marketing">Маркетинг</h3>
                             </a>
-                            <div class="product-item-thumb-p">
-                                <p class="product-item-p-text">Технокряк это современная площадка распространения коронавируса. Компании используют
-                                    эту платформу для цифрового
-                                    шпионажа и атак на защищённые сервера конкурентов.</p>
-                            </div>
-                        </div>
                     </li>
 
                     <li class="product-item">
-                        <div class="product-item-thumb">
                             <a href="portfolio.html" class="prtfl-card">
-                                <img src="images/prtfl-img-9-growing.jpeg" alt="ноутбук" width="370">
+                                <div class="product-item-thumb">
+                                    <img src="images/prtfl-img-9-growing.jpeg" alt="ноутбук" width="370">
+                                    <div class="product-item-overlay-text">
+                                        <p class="product-item-p-text">Технокряк это современная площадка распространения коронавируса. Компании используют
+                                            эту платформу для цифрового
+                                            шпионажа и атак на защищённые сервера конкурентов.</p>
+                                    </div>
+                                </div>
                                 <h2 class="prtfl-card-title">Growing Business</h2>
                                 <h3 class="prtfl-filtr-description app">Приложение</h3>
                             </a>
-                            <div class="product-item-thumb-p">
-                                <p class="product-item-p-text">Технокряк это современная площадка распространения коронавируса. Компании используют
-                                    эту платформу для цифрового
-                                    шпионажа и атак на защищённые сервера конкурентов.</p>
-                            </div>
-                        </div>
                     </li>
                 </ul>
             </div>
