--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a class="logo-color-text" href="#logo"><span class="logo-text">Web</span>Studio</a>
         <nav>
             <ul class="site-nav list">
-                <li class="nav-item"><a class="link-header" href="./index.html">Студия</a></li>
+                <li class="nav-item"><a class="link-header active-link-header" href="./index.html">Студия</a></li>
                 <li class="nav-item"><a class="link-header" href="./portfolio.html">Портфолио</a></li>
                 <li class="nav-item"><a class="link-header" href="#contacts">Контакты</a></li>
             </ul>
@@ -46,7 +46,7 @@
             <div class="container">
                 <h1 class="main-title">Эффективные решения<br>для вашего бизнеса</h1>
                 <div>
-                    <button type="button" class="button-buy">Заказать услугу</button>
+                    <button type="button" class="button-buy" data-modal-open>Заказать услугу</button>
                 </div>
             </div>
         </section>
@@ -425,5 +425,19 @@
             </div>          
         </footer>
     </main>
+
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+
+            <button class="icon-close-modal" data-modal-close>
+                <svg class="button-close-modal" width="18px" height="18px">
+                    <use href="images/sprite.svg#icon-icon-close-modal"></use>
+                </svg></button>
+
+        </div>
+
+    </div>
+
+    <script src="./js/modal.js"></script>
 </body>
 </html>
